; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nouveau_fbcon.c_nouveau_fbcon_gpu_lockup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nouveau_fbcon.c_nouveau_fbcon_gpu_lockup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fb_info = type { i32, %struct.nouveau_fbdev* }
%struct.nouveau_fbdev = type { i32 }
%struct.nouveau_drm = type { i32 }

@.str = private unnamed_addr constant [42 x i8] c"GPU lockup - switching to software fbcon\0A\00", align 1
@FBINFO_HWACCEL_DISABLED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nouveau_fbcon_gpu_lockup(%struct.fb_info* %0) #0 {
  %2 = alloca %struct.fb_info*, align 8
  %3 = alloca %struct.nouveau_fbdev*, align 8
  %4 = alloca %struct.nouveau_drm*, align 8
  store %struct.fb_info* %0, %struct.fb_info** %2, align 8
  %5 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %6 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %5, i32 0, i32 1
  %7 = load %struct.nouveau_fbdev*, %struct.nouveau_fbdev** %6, align 8
  store %struct.nouveau_fbdev* %7, %struct.nouveau_fbdev** %3, align 8
  %8 = load %struct.nouveau_fbdev*, %struct.nouveau_fbdev** %3, align 8
  %9 = getelementptr inbounds %struct.nouveau_fbdev, %struct.nouveau_fbdev* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.nouveau_drm* @nouveau_drm(i32 %10)
  store %struct.nouveau_drm* %11, %struct.nouveau_drm** %4, align 8
  %12 = load %struct.nouveau_drm*, %struct.nouveau_drm** %4, align 8
  %13 = call i32 @NV_ERROR(%struct.nouveau_drm* %12, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  %14 = load i32, i32* @FBINFO_HWACCEL_DISABLED, align 4
  %15 = load %struct.fb_info*, %struct.fb_info** %2, align 8
  %16 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = or i32 %17, %14
  store i32 %18, i32* %16, align 8
  ret void
}

declare dso_local %struct.nouveau_drm* @nouveau_drm(i32) #1

declare dso_local i32 @NV_ERROR(%struct.nouveau_drm*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
